k8s/overlays/local/istio/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
    environment: local
    project: solidity-security
    managed-by: kustomize
    istio-injection: disabled
